# telepresence-robot-research

center_bridge/: CMakeLists.txt  package.xml
center_bridge/launch/: center_bridge.launch
center_bridge/msg/: cmd_from_hive.msg  cmd_to_raspberry.msg
center_bridge/src/: aws_center_bridge.cpp  center_raspberry_bridge.cpp  center_skeleton_bridge.cpp
openni_tracker/src/: openni_tracker.cpp
skeleton_markers/: CMakeLists.txt
skeleton_markers/include/: json_message.cpp
skeleton_markers/nodes/: markers_from_tf.py
skeleton_markers/src/: json_message.h  skeleton_sub_client.cpp  skeleton_sub_json_client.cpp  skeleton_sub_json_server.cpp  skeleton_sub_server.cpp  socket.cpp  tracker_receiver.cpp
